k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cocos-app
  labels:
    app: cocos-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cocos-app
  template:
    metadata:
      labels:
        app: cocos-app
    spec:
      containers:
        - name: app
          image: docker.io/your-dockerhub-username/cocos-challange:latest
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cocos-kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka:latest
          ports:
            - containerPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cocos-redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
